// Proto definition for data annotation service.
syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.routeguide";
option java_outer_classname = "DataAnnotationServiceProto";
option objc_class_prefix = "HLW";

package commons;

message Category {
  string name = 1;

  repeated string subcategories = 2;
}

message Attribute {
  string name = 1;
  repeated string values = 2;
}

// Specify different computer vision tasks.
enum TaskType {
  OBJECT_DETECTION_2D = 0;
  CLASSIFICATION = 1;
  POSE_ESTIMATION = 2;
  INSTANCE_SEGMENTATION = 3;
  POSE_ESTIMATION_DENSE = 4;
}

enum DataType {
  UNKNOWN = 0;
  IMAGE = 1;
  VIDEO = 2;
}